change gradle wrapper version to 5.6.2 for analyze fix